# sercom

./: CMakeLists.txt  LICENSE  README.md
include/: sercom.h
sample/: CMakeLists.txt  main.cpp
src/: impl.h  linux.cpp  win.cpp
